[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaction"
version = "0.5.6"
description = "Create GitHub Actions using Python"
authors = [{ name = "Sadra Yahyapour", email = "lnxpylnxpy@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "copier >= 9.2",
    "click >= 8.1",
    "pygithub >= 2.3.0",
    "markdown-to-json == 2.1.0",
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
pyaction = "pyaction.cli:cli"

[project.optional-dependencies]
dev = ["coverage", "pytest-cookies"]
docs = ["mkdocs-material", "cairosvg", "pillow"]

[project.urls]
Documentation = "https://pyaction.imsadra.me"
Repository = "https://github.com/lnxpy/pyaction"

[tool.bumpversion]
current_version = "0.5.6"
commit = "true"
tag = "true"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "pyaction/__init__.py"

[[tool.bumpversion.files]]
filename = "pyaction/template/{{action_slug}}/requirements.txt"
