[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaction"
version = "0.6.2"
description = "Create GitHub Actions using Python"
authors = [{ name = "Sadra Yahyapour", email = "lnxpylnxpy@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "copier >= 9.2",
    "click >= 8.1",
    "pydantic >= 2.7.0",
    "pygithub >= 2.3.0",
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
pyaction = "pyaction.cli:cli"

[project.optional-dependencies]
dev = ["coverage", "pytest-cookies"]
docs = ["mkdocs-material", "cairosvg", "pillow"]

[project.urls]
Documentation = "https://pyaction.imsadra.me"
Repository = "https://github.com/lnxpy/pyaction"

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.bumpversion]
current_version = "0.6.2"
commit = "true"
tag = "true"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "pyaction/__init__.py"

[[tool.bumpversion.files]]
filename = "pyaction/template/{{action_slug}}/requirements.txt"
