[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyaction"
version = "0.8.1"
description = "Create GitHub Actions using Python"
authors = [{ name = "Sadra Yahyapour", email = "lnxpylnxpy@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["pydantic ~= 2.9.2", "requests ~= 2.32.3"]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
pyaction = "pyaction.cli:cli"

[project.optional-dependencies]
dev = ["coverage", "pytest-cookies"]
cli = ["copier ~= 9.2", "click ~= 8.1", "python-dotenv ~= 1.0.1"]

[project.urls]
Documentation = "https://pyaction.imsadra.me"
Repository = "https://github.com/lnxpy/pyaction"

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.bumpversion]
current_version = "0.8.1"
commit = "true"
tag = "true"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "pyaction/__init__.py"

[[tool.bumpversion.files]]
filename = "pyaction/action_template/{{action_slug}}/pyproject.toml.jinja"
