[metadata]
name = cookiecutter_pyaction
version = 0.1.0
description = A cookiecutter template for python-based custom github actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lnxpy/cookiecutter-pyaction
author = Sadra Yahyapour
author_email = lnxpylnxpy@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = cookiecutter, template, github, github-actions, actions, cicd, docker

[options]
python_requires = >=3.8

[options.extras_require]
dev =
    bump2version
    cookiecutter
    pre-commit
    pytest
    tox
